--- a/genomes.Rmd
+++ b/genomes.Rmd
@@ -70,63 +70,81 @@ for(i in 1:length(fbmatches)){ # for each fishbase species
         ncbi[fbmatches[[i]], ":="(CoralReef = TRUE, Family = fbspp$Family[j], Order = fbspp$Order[j], Class = fbspp$Class[j], Phylum = fbspp$Phylum[j])] # adds metadata to all matching genomes. note that some spp have multiple genomes on NCBI    
     }
 }
-ncbi <- ncbi[CoralReef == TRUE, ]
-print(paste('Genomes from reef species:', ncbi[, .N]))
+print(paste('Genomes from reef species:', ncbi[CoralReef == TRUE, .N]))
 ```
+
+
+## Check for taxa of interest
+There's a noticeable lack of Symbiodiniaceae.
+```{r}
+# Symbionts in sealifebase?
+slspp[grep('Symbio', slspp$Family), ] # not classified as Symbiodiniaceae
+slspp[grep('Symbio', slspp$Genus), ] # 1 Symbiodinium
+slspp[grep('Suess', slspp$Order), ] # not classified as Suessiales
+slspp[grep('Dinophyceae', slspp$Class), ] # 1 Dinophyceae
+slspp[grep('Symbio', slspp$Genus), ]
+
+# Symbionts in NCBI?
+grep('Breviolum|Cladocopium|Durusdinium|Freudenthalidium|Halluxium|Miliolidium|Symbiodinium', ncbi$OrganismName, value = TRUE) # look for genera: found 14
+
+```
+
+
 
 ## Identify a preferred genome for each species
 Some species have multiple genomes. Choose chromosome > scaffold > contig, then choose the newest release date, then the largest.
 ```{r}
-ncbi[, selectedGenome := FALSE]
-sppnames <- ncbi[, unique(OrganismName)]
+ncbi_reef <- ncbi[CoralReef == TRUE, ] # trim to just coral reef genomes
+ncbi_reef[, selectedGenome := FALSE]
+sppnames <- ncbi_reef[, unique(OrganismName)]
 for(i in 1:length(sppnames)){
-    j <- ncbi[, which(OrganismName == sppnames[i])]
-    if(length(j)==0) stop(paste('i=', i, 'but could not find it in ncbi data.table'))
-    if(length(j)==1) ncbi[j, selectedGenome := TRUE] # if only one species, mark it
+    j <- ncbi_reef[, which(OrganismName == sppnames[i])]
+    if(length(j)==0) stop(paste('i=', i, 'but could not find it in ncbi_reef data.table'))
+    if(length(j)==1) ncbi_reef[j, selectedGenome := TRUE] # if only one species, mark it
     if(length(j)>1){
-        j <- ncbi[, which(Level == 'Chromosome' & OrganismName == sppnames[i])]
+        j <- ncbi_reef[, which(Level == 'Chromosome' & OrganismName == sppnames[i])]
         if(length(j)>0){
-            if(length(j)==1) ncbi[j, selectedGenome := TRUE] # if only one chromosome-scale assembly, mark it
+            if(length(j)==1) ncbi_reef[j, selectedGenome := TRUE] # if only one chromosome-scale assembly, mark it
             if(length(j)>1){
-                maxDate <- ncbi[j, max(as.Date(ReleaseDate))]
-                j <- ncbi[, which(Level == 'Chromosome' & OrganismName == sppnames[i] & as.Date(ReleaseDate) == maxDate)] # find the newest chromosome-scale assembly
-                if(length(j)==1) ncbi[j, selectedGenome := TRUE] # mark it
+                maxDate <- ncbi_reef[j, max(as.Date(ReleaseDate))]
+                j <- ncbi_reef[, which(Level == 'Chromosome' & OrganismName == sppnames[i] & as.Date(ReleaseDate) == maxDate)] # find the newest chromosome-scale assembly
+                if(length(j)==1) ncbi_reef[j, selectedGenome := TRUE] # mark it
                 if(length(j)>1){
-                    maxSize <- ncbi[j, max(SizeMb)]
-                    j <- ncbi[, which(Level == 'Chromosome' & OrganismName == sppnames[i] & as.Date(ReleaseDate) == maxDate & SizeMb == maxSize)] # find the largest chromosome-scale assembly
-                    if(length(j)==1) ncbi[j, selectedGenome := TRUE] # mark it
+                    maxSize <- ncbi_reef[j, max(SizeMb)]
+                    j <- ncbi_reef[, which(Level == 'Chromosome' & OrganismName == sppnames[i] & as.Date(ReleaseDate) == maxDate & SizeMb == maxSize)] # find the largest chromosome-scale assembly
+                    if(length(j)==1) ncbi_reef[j, selectedGenome := TRUE] # mark it
                     if(length(j)>1) stop(paste('i=', i, ', need to handle the case when multiple chromosome-scale assemblies have the same release date and size'))
                 } 
             }
         }
         if(length(j) == 0){
-            j <- ncbi[, which(Level == 'Scaffold' & OrganismName == sppnames[i])]
+            j <- ncbi_reef[, which(Level == 'Scaffold' & OrganismName == sppnames[i])]
             if(length(j)>0){
-                if(length(j)==1) ncbi[j, selectedGenome := TRUE] # if only one scaffold-scale assembly, mark it
+                if(length(j)==1) ncbi_reef[j, selectedGenome := TRUE] # if only one scaffold-scale assembly, mark it
                 if(length(j)>1){
-                    maxDate <- ncbi[j, max(as.Date(ReleaseDate))]
-                    j <- ncbi[, which(Level == 'Scaffold' & OrganismName == sppnames[i] & as.Date(ReleaseDate) == maxDate)] # find the newest scaffold-scale assembly
-                    if(length(j)==1) ncbi[j, selectedGenome := TRUE] # mark it
+                    maxDate <- ncbi_reef[j, max(as.Date(ReleaseDate))]
+                    j <- ncbi_reef[, which(Level == 'Scaffold' & OrganismName == sppnames[i] & as.Date(ReleaseDate) == maxDate)] # find the newest scaffold-scale assembly
+                    if(length(j)==1) ncbi_reef[j, selectedGenome := TRUE] # mark it
                     if(length(j)>1){
-                        maxSize <- ncbi[j, max(SizeMb)]
-                        j <- ncbi[, which(Level == 'Scaffold' & OrganismName == sppnames[i] & as.Date(ReleaseDate) == maxDate & SizeMb == maxSize)] # find the largest scaffolds-scale assembly
-                        if(length(j)==1) ncbi[j, selectedGenome := TRUE] # mark it
+                        maxSize <- ncbi_reef[j, max(SizeMb)]
+                        j <- ncbi_reef[, which(Level == 'Scaffold' & OrganismName == sppnames[i] & as.Date(ReleaseDate) == maxDate & SizeMb == maxSize)] # find the largest scaffolds-scale assembly
+                        if(length(j)==1) ncbi_reef[j, selectedGenome := TRUE] # mark it
                         if(length(j)>1) stop(paste('i=', i, ', need to handle the case when multiple scaffold-scale assemblies have the same release date and size'))
                     }
                 }
             }
             if(length(j) == 0){
-                j <- ncbi[, which(Level == 'Contig' & OrganismName == sppnames[i])]
+                j <- ncbi_reef[, which(Level == 'Contig' & OrganismName == sppnames[i])]
                 if(length(j)>0){
-                    if(length(j)==1) ncbi[j, selectedGenome := TRUE] # if only one contig-scale assembly, mark it
+                    if(length(j)==1) ncbi_reef[j, selectedGenome := TRUE] # if only one contig-scale assembly, mark it
                     if(length(j)>1){
-                        maxDate <- ncbi[j, max(as.Date(ReleaseDate))]
-                        j <- ncbi[, which(Level == 'Contig' & OrganismName == sppnames[i] & as.Date(ReleaseDate) == maxDate)] # find the newest contig-scale assembly
-                        if(length(j)==1) ncbi[j, selectedGenome := TRUE] # mark it
+                        maxDate <- ncbi_reef[j, max(as.Date(ReleaseDate))]
+                        j <- ncbi_reef[, which(Level == 'Contig' & OrganismName == sppnames[i] & as.Date(ReleaseDate) == maxDate)] # find the newest contig-scale assembly
+                        if(length(j)==1) ncbi_reef[j, selectedGenome := TRUE] # mark it
                         if(length(j)>1){
-                            maxSize <- ncbi[j, max(SizeMb)]
-                            j <- ncbi[, which(Level == 'Contig' & OrganismName == sppnames[i] & as.Date(ReleaseDate) == maxDate & SizeMb == maxSize)] # find the largest chromosome-scale assembly
-                            if(length(j)==1) ncbi[j, selectedGenome := TRUE] # mark it
+                            maxSize <- ncbi_reef[j, max(SizeMb)]
+                            j <- ncbi_reef[, which(Level == 'Contig' & OrganismName == sppnames[i] & as.Date(ReleaseDate) == maxDate & SizeMb == maxSize)] # find the largest chromosome-scale assembly
+                            if(length(j)==1) ncbi_reef[j, selectedGenome := TRUE] # mark it
                             if(length(j)>1) stop(paste('i=', i, ', need to handle the case when multiple contig-scale assemblies have the same release date and size'))
                         }
                     }
@@ -139,16 +157,16 @@ for(i in 1:length(sppnames)){
 }
 
 # check
-print(paste('Number of reef species genomes:', ncbi[, .N]))
-print(paste('Number of selected genomes:', ncbi[selectedGenome==TRUE, .N]))
-print(paste('Min number of selected genomes per species (should be 1):', ncbi[, .(num = sum(selectedGenome)), by = OrganismName][, min(num)]))
-print(paste('Max number of selected genomes per species (should be 1):', ncbi[, .(num = sum(selectedGenome)), by = OrganismName][, max(num)]))
+print(paste('Number of reef species genomes:', ncbi_reef[, .N]))
+print(paste('Number of selected genomes:', ncbi_reef[selectedGenome==TRUE, .N]))
+print(paste('Min number of selected genomes per species (should be 1):', ncbi_reef[, .(num = sum(selectedGenome)), by = OrganismName][, min(num)]))
+print(paste('Max number of selected genomes per species (should be 1):', ncbi_reef[, .(num = sum(selectedGenome)), by = OrganismName][, max(num)]))
 ```
 
 ## Output list of reef genomes
 Some slight column renaming so easier to read into R in the future.
 ```{r output table}
-write.csv(ncbi[, .(OrganismName, Phylum, Class, Order, Family, OrganismGroups, Strain, BioSample, BioProject, Assembly, Level, SizeMb, GBpercent, WGS, Scaffolds, CDS, ReleaseDate, GenBankFTP, selectedGenome)], file = here('tables', 'reefgenomes.csv'), row.names = FALSE)
+write.csv(ncbi_reef[, .(OrganismName, Phylum, Class, Order, Family, OrganismGroups, Strain, BioSample, BioProject, Assembly, Level, SizeMb, GBpercent, WGS, Scaffolds, CDS, ReleaseDate, GenBankFTP, selectedGenome)], file = here('tables', 'reefgenomes.csv'), row.names = FALSE)
 
 ```
 
@@ -157,28 +175,33 @@ write.csv(ncbi[, .(OrganismName, Phylum, Class, Order, Family, OrganismGroups, S
 ## Plot of genomes available
 ```{r plot}
 # make a list of the taxonomic groups we want to show
-taxonnames = ncbi[selectedGenome == TRUE, .(Order, Class, Phylum)]
+taxonnames <- ncbi_reef[selectedGenome == TRUE, .(Order, Class, Phylum)]
 taxonnames[, show := Phylum] # generally show Phylum
 taxonnames[Phylum == 'Chordata', show := Class] # for fishes, show class
-taxonnames[Phylum != 'Cnidaria' & Phylum != 'Chordata', show := 'Other non-Chordates']
-levs = taxonnames[, unique(show)]
-levs <- levs[order(levs)]
-i = which(levs == 'Cnidaria'); levs = c(levs[-i], levs[i]) # move Cnidarians to end of list
-i = which(levs == 'Other non-Chordates'); levs = c(levs[-i], levs[i]) # move other inverts to end of list
+levs <- taxonnames[, unique(show)]
+levsclass <- taxonnames[Phylum == 'Chordata', unique(Class)]
+levs <- levs[order(levs)] # make alphabetical
+i = which(levs %in% levsclass)
+levs = c(levs[-i], levs[i]) # move chordates to end of list
 taxonnames[, show := factor(show, levels = levs)]
 
 # display
-genome_table = table(ncbi[selectedGenome == TRUE, factor(Level, levels = c('Chromosome', 'Scaffold', 'Contig'))], taxonnames[, show]) # also re-order the factor levels
+genome_table = table(ncbi_reef[selectedGenome == TRUE, factor(Level, levels = c('Chromosome', 'Scaffold', 'Contig'))], taxonnames[, show]) # also re-order the factor levels
 cols = c('#111111', '#999999', '#DDDDDD')
 par(mai = c(2.5, 2, 0, 0))
 barplot(genome_table, beside = TRUE, cex.names = 0.7, las = 2, ylab = 'Number of species', col = cols)
-legend('top', legend = rownames(genome_table), cex = 0.5, fill = cols, bty = 'n')
+legend('topright', legend = rownames(genome_table), cex = 0.5, fill = cols, bty = 'n')
+mtext('Chordates', side = 1, line = 5.5, adj = 0.6, cex = 0.7)
+arrows(33, -24.5, 40, -24.5, code = 2, xpd = TRUE, length = 0.15)
+
 
 # output to file
 png(filename = here('figures', 'fig4.png'), width=4, height = 2, units = 'in', res = 300)
-par(mai = c(1, 0.8, 0, 0))
+par(mai = c(1, 0.5, 0.1, 0), tcl = -0.1, mgp = c(1.5,0.4, 0))
 barplot(genome_table, beside = TRUE, cex.names = 0.5, cex.axis = 0.5, cex.lab = 0.5, las = 2, ylab = 'Number of species', col = cols)
-legend('top', legend = rownames(genome_table), cex = 0.5, bty = 'n', fill = cols)
+legend('topright', legend = rownames(genome_table), cex = 0.5, bty = 'n', fill = cols)
+mtext('Chordates', side = 1, line = 3.3, adj = 0.6, cex = 0.6)
+arrows(33.5, -35, 40, -35, code = 2, xpd = TRUE, length = 0.10)
 dev.off()
 ```
 
