--- a/genomes.Rmd
+++ b/genomes.Rmd
@@ -196,7 +196,16 @@ arrows(33, -24.5, 40, -24.5, code = 2, xpd = TRUE, length = 0.15)
 
 
 # output to file
-png(filename = here('figures', 'fig4.png'), width=4, height = 2, units = 'in', res = 300)
+png(filename = here('figures', 'fig5.png'), width=4, height = 2, units = 'in', res = 300)
+par(mai = c(1, 0.5, 0.1, 0), tcl = -0.1, mgp = c(1.5,0.4, 0))
+barplot(genome_table, beside = TRUE, cex.names = 0.5, cex.axis = 0.5, cex.lab = 0.5, las = 2, ylab = 'Number of species', col = cols)
+legend('topright', legend = rownames(genome_table), cex = 0.5, bty = 'n', fill = cols)
+mtext('Chordates', side = 1, line = 3.3, adj = 0.6, cex = 0.6)
+arrows(33.5, -35, 40, -35, code = 2, xpd = TRUE, length = 0.10)
+dev.off()
+
+# output to file
+pdf(file = here('figures', 'fig5.pdf'), width=4, height = 2)
 par(mai = c(1, 0.5, 0.1, 0), tcl = -0.1, mgp = c(1.5,0.4, 0))
 barplot(genome_table, beside = TRUE, cex.names = 0.5, cex.axis = 0.5, cex.lab = 0.5, las = 2, ylab = 'Number of species', col = cols)
 legend('topright', legend = rownames(genome_table), cex = 0.5, bty = 'n', fill = cols)
